# helia-rt

./: .bazelrc  .gitignore  .release-please-config.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  ambiq_notes.md  build.sh  mkdocs.yaml  module.mk  ns_tflm_module.py  pyproject.toml  release-please-config.json  zephyr_static_export.sh
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.github/: dependabot.yml
.github/workflows/: README.md  ambiq_build.yml  ambiq_build_docker_image.yml  ambiq_postmerge.yml  ambiq_presubmit.yml  ambiq_release.yml  ambiq_test.yml  check_tflite_files.yml  ci.yml  cortex_m.yml  cortex_m_arm_compiler.yml  cortex_m_virtual_hardware.yml  docs.yml  generate_integration_tests.yml  helia_build.yml  helia_build_docker_image.yml  helia_release.yml  helia_test.yml  issue_on_error.yml  log_binary_size_pr.yml  ns_release.yml  ns_tflm_rt_assets.yml  pypi_build.yml  release-please.yml  riscv.yml  run_ambiq.yml  run_ci.yml  run_helia.yml  run_hexagon.yml  run_xtensa.yml  smoke_cmake.yml  stale_handler.yml  sync.yml  tests_entry.yml  tests_post.yml  zephyr_release.yml  zephyr_tflm_rt_assets.yml
.github/zephyr-smoke/: CMakeLists.txt  prj.conf
.github/zephyr-smoke/src/: main.cc
ci/: disable_upstream_workflows.sh
cmake/: README.md  dump_manifest.cmake  helia_rt_sources.cmake
docs/: automatically_generated_files.md  continuous_integration.md  index.md  python.md  why-helia-rt.md
docs/benchmarks/: index.md
docs/contributing/: architecture.md  index.md  release-process.md  upstream-sync.md
docs/css/: custom.css
docs/examples/: cmake.md  index.md  neuralspot.md  source.md  zephyr.md
docs/features/: index.md
docs/getting-started/: cmsis-pack.md  index.md  neuralspot.md  zephyr.md
docs/guides/: index.md  kernel-selection.md  memory-placement.md  speed-vs-size.md  static-vs-source.md  toolchains.md  troubleshooting.md  upgrading-from-litert.md
docs/internal/: tflm-replant-added-files.txt  tflm-replant-manifest.md
docs/js/: chart-init.js
docs/reference/: api.md  attribution.md  continuous-integration.md  generated-files.md  index.md  operator-coverage.md  python-development.md  silicon-support.md
docs/reference/benchmarks/: index.md
docs/usage/: index.md  memory_placement.md  neuralspot.md  source.md  zephyr.md
helia/: README.md
helia/docs/: repository_layout.md
helia/patches/: README.md  apply.sh  drift_reduction_opportunities.md  inline_drift.md
include/: memory_regions.h
neuralspot/: ambiq_build.py  build.sh  cortex_m_generic_makefile.inc  helia_build.py  module.mk  ns_tflm_module.py
nsx/: CMakeLists.txt  nsx-module.yaml
nsx-source/: CMakeLists.txt  nsx-module.yaml
python/tflite_micro/: BUILD  whl_test.sh
signal/micro/kernels/: BUILD
tensorflow/lite/micro/: BUILD  build_def.bzl  helia_rt_version.h  heliart_version.h  hexdump.cc  micro_interpreter_graph.cc  micro_interpreter_test.cc  micro_mutable_op_resolver.h  micro_profiler.cc  micro_resource_variable.cc
tensorflow/lite/micro/arena_allocator/: BUILD
tensorflow/lite/micro/cortex_m_corstone_300/: corstone_300_atfe.ld  corstone_300_gcc.ld
tensorflow/lite/micro/docs/: ambiq_notes.md  getting_started.md  helia_notes.md  optimized_kernel_implementations.md  porting_reference_ops.md
tensorflow/lite/micro/examples/hello_world/: BUILD  train.py
tensorflow/lite/micro/examples/micro_speech/: BUILD
tensorflow/lite/micro/integration_tests/: generate_per_layer_tests.py
tensorflow/lite/micro/integration_tests/templates/: integration_tests_cc.mako
tensorflow/lite/micro/kernels/: BUILD  Makefile.inc  activations_test.cc  add.h  batch_matmul.h  batch_to_space_nd_test.cc  comparisons.cc  comparisons_test.cc  conv.h  cumsum.cc  cumsum_test.cc  depth_to_space.cc  depth_to_space_test.cc  depthwise_conv.h  embedding_lookup_test.cc  fill_test.cc  fully_connected.h  fully_connected_test.cc  gather_nd_test.cc  gather_test.cc  hard_swish.cc  hard_swish_test.cc  l2norm.cc  l2norm_test.cc  log_softmax.cc  log_softmax_test.cc  maximum_minimum.h  mirror_pad_test.cc  mul.h  neg.cc  neg_test.cc  pack_test.cc  pad.h  pad_common.cc  pooling.h  prelu_test.cc  reduce_common.cc  reduce_test.cc  resize_bilinear.cc  resize_bilinear_test.cc  (+14 more)
tensorflow/lite/micro/kernels/ambiq/: README.md  add.cc  arm_fully_connected_per_channel_s16.cc  arm_fully_connected_wrapper_s16.cc  comparisons.cc  conv.cc  conv2d_common.cc  depthwise_conv.cc  fully_connected.cc  leaky_relu.cc  logistic.cc  pad.cc  quantize_common.cc  reduce_common.cc  strided_slice.cc  transpose_conv.cc
tensorflow/lite/micro/kernels/ambiq_mve/: README.md  pad.cc
tensorflow/lite/micro/kernels/cmsis_nn/: transpose_conv.cc
tensorflow/lite/micro/kernels/ethos_u/: README.md  ethosu.cc
tensorflow/lite/micro/kernels/helia/: README.md  batch_matmul.cc  fully_connected.cc  helia_common.h  logistic.cc  logistic_common.cc  logistic_helia.h  reduce.cc  reduce_common.cc
tensorflow/lite/micro/kernels/xtensa/: pad.cc
tensorflow/lite/micro/memory_planner/: BUILD
tensorflow/lite/micro/testing/: BUILD  test_with_arm_corstone_300.sh
tensorflow/lite/micro/tools/: generate_test_for_model.py  requantize_flatbuffer.py
tensorflow/lite/micro/tools/benchmarking/: generic_model_benchmark.cc  metrics.cc  show_meta_data.cc.template
tensorflow/lite/micro/tools/ci_build/: build_ambiq.sh  build_ambiq_cm4_cm55.sh  build_helia.sh  build_zephyr_prebuilt.sh  ns_local_build.sh  package_helia_bundle.sh  package_neuralspot_bundle.sh  package_zephyr_bundle.sh  release_asset_helpers.sh  resolve_release_meta.sh  test_ambiq.sh  test_ambiq_cm4_cm55.sh  test_ambiq_corstone_300.sh  test_ambiq_cortex_m4.sh  test_ambiq_cortex_m55.sh  test_bazel.sh  test_bazel_asan.sh  test_bazel_msan.sh  test_bazel_tflite_tools.sh  test_helia.sh  test_size.sh
tensorflow/lite/micro/tools/ci_build/templates/zephyr_prebuilt/zephyr/: CMakeLists.txt  Kconfig
tensorflow/lite/micro/tools/make/: Makefile  (+10 more)
tools/cmsis_pack/: __init__.py  build_pack.py  check_pdsc.py
treedir/: module.mk
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+753 files in other folders)
